# airpanel

./: CMakeLists.txt
include/: epdif.h
src/: config.h  constants.h  core.cpp  core.h  exceptions.h  log_formatter.h  logger.h  main.cpp  main.h  readpng.cpp  readpng.h
test/: function-test.cpp  image_data.h  load-bitmap-fixture.cpp  load-bitmap-fixture.h  main-test.cpp  process_image-test.cpp  save-bitmap-fixture.cpp  save-bitmap-fixture.h
